--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        PhoneGap
+        <title>PhoneGap</title>
     </head>
     <body>
         Welcome PhoneGap
