--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>PhoneGap</title>
-    </head>
-    <body>
-        Welcome PhoneGap
-    </body>
+<!DOCTYPE HTML>
+<html manifest="" lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <title>Carousel</title>
+    <script id="microloader" type="text/javascript" src="../../microloader/development.js"></script>
+</head>
+<body>
+</body>
 </html>
