--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <title>jQTouch &beta;</title>
-        <style type="text/css" media="screen">@import "../../themes/css/jqtouch.css";</style>
-        <script src="../../src/lib/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../src/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
+        <style type="text/css" media="screen">@import "css/jqtouch.css";</style>
+        <script src="src/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 
 
         <script type="text/javascript" charset="utf-8">
@@ -13,15 +13,7 @@
                 icon: 'jqtouch.png',
                 addGlossToIcon: false,
                 startupScreen: 'jqt_startup.png',
-                statusBar: 'black',
-                preloadImages: [
-                    '../../themes/jqt/img/back_button.png',
-                    '../../themes/jqt/img/back_button_clicked.png',
-                    '../../themes/jqt/img/button_clicked.png',
-                    '../../themes/jqt/img/grayButton.png',
-                    '../../themes/jqt/img/whiteButton.png',
-                    '../../themes/jqt/img/loading.gif'
-                    ]
+                statusBar: 'black'
             });
 
             $(function(){
