--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>jQTouch &beta;</title>
         <style type="text/css" media="screen">@import "css/jqtouch.css";</style>
         <script src="src/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="src/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="src/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 
 
