--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <title>jQTouch &beta;</title>
         <style type="text/css" media="screen">@import "css/jqtouch.css";</style>
         <script src="src/zepto.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="src/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="src/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 
 
@@ -23,16 +22,9 @@
                     selector: '.revealme'
                 });
                 
-                $('#test').swipe(function(evt, data) {
-                    if (info.direction === 'left') {
-                        jQT.goTo($('#page2'), 'dissolve');
-                    }
-                });
-                $('#page2').swipe(function(evt, data){
-                    if (info.direction === 'right') {
-                        jQT.goBack('#page1', 'dissolve');
-                    }
-                });
+                $('#test').bind('touchstart', function (e) {alert("touch start");});
+                $('#test').bind('touchend', function (e) {alert("touch end");});
+                $('#test').bind('swipe', function (e,i) {alert("swipe");});
             });
         </script>
         <style type="text/css" media="screen">
