--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
                     selector: '.revealme'
                 });
                 
-                $('#test').bind('touchstart', function (e) {alert("touch start");});
                 $('#test').bind('touchend', function (e) {alert("touch end");});
-                $('#test').bind('swipe', function (e,i) {alert("swipe");});
+                $('#page2').bind('swipe', function (e,i) {alert("swipe");});
             });
         </script>
         <style type="text/css" media="screen">
